src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_many Post inp.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct '_Post_QueryInput' #164
├─ [cursor]: optional #160
│  └─ item: union '_Post_Cursor' #159
│     ├─ variant_0: struct #157
│     │  └─ [id]: integer #79
│     └─ variant_1: struct #158
│        └─ [title]: string #80
├─ [distinct]: optional #163
│  └─ item: list '_KeysOf_Post' #162
│     └─ item: string #161 enum{ '"id"', '"title"', '"author"' }
├─ [orderBy]: optional #154
│  └─ item: list '_Post_OrderBy' #153
│     └─ item: struct #152
│        ├─ [author]: optional #151
│        │  └─ item: list '_User_OrderBy_excluding___rel_Post_User_1' #150
│        │     └─ item: struct #149
│        │        ├─ [id]: optional '_Sort' #50
│        │        │  └─ item: union #49
│        │        │     ├─ variant_0: struct #48
│        │        │     │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        │        │     └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        │        └─ [name]: optional '_Sort' #50
│        │           └─ item: union #49
│        │              ├─ variant_0: struct #48
│        │              │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        │              └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        ├─ [id]: optional '_Sort' #50
│        │  └─ item: union #49
│        │     ├─ variant_0: struct #48
│        │     │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        │     └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│        └─ [title]: optional '_Sort' #50
│           └─ item: union #49
│              ├─ variant_0: struct #48
│              │  └─ [sort]: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
│              └─ variant_1: string '_SortOrder' #46 enum{ '"asc"', '"desc"' }
├─ [skip]: optional #156
│  └─ item: integer '_Skip' #59
├─ [take]: optional #155
│  └─ item: integer '_Take' #57
└─ [where]: optional #148
   └─ item: struct 'QueryPostWhereInput' #147
      ├─ [AND]: optional #145
      │  └─ item: list #144
      │     └─ item: &QueryPostWhereInput #143
      ├─ [NOT]: optional #146
      │  └─ item: &QueryPostWhereInput #143
      ├─ [OR]: optional #145
      │  └─ item: list #144
      │     └─ item: &QueryPostWhereInput #143
      ├─ [author]: optional #141
      │  └─ item: struct 'UserWhere__skip_82_PostWhere' #140
      │     ├─ [id]: optional #129
      │     │  └─ item: optional '_integer_filter_c' #36
      │     │     └─ item: union #35
      │     │        ├─ variant_0: either '_integer_filter' #33
      │     │        │  ├─ variant_0: integer #25
      │     │        │  ├─ variant_1: struct #28
      │     │        │  │  └─ [equals]: integer #25
      │     │        │  ├─ variant_2: struct #29
      │     │        │  │  └─ [not]: integer #25
      │     │        │  ├─ variant_3: struct #30
      │     │        │  │  ├─ [gt]: optional #26
      │     │        │  │  │  └─ item: integer #25
      │     │        │  │  ├─ [gte]: optional #26
      │     │        │  │  │  └─ item: integer #25
      │     │        │  │  ├─ [lt]: optional #26
      │     │        │  │  │  └─ item: integer #25
      │     │        │  │  └─ [lte]: optional #26
      │     │        │  │     └─ item: integer #25
      │     │        │  ├─ variant_4: struct #31
      │     │        │  │  └─ [in]: list #27
      │     │        │  │     └─ item: integer #25
      │     │        │  └─ variant_5: struct #32
      │     │        │     └─ [notIn]: list #27
      │     │        │        └─ item: integer #25
      │     │        └─ variant_1: struct #34
      │     │           └─ [not]: either '_integer_filter' #33
      │     │              ├─ variant_0: integer #25
      │     │              ├─ variant_1: struct #28
      │     │              │  └─ [equals]: integer #25
      │     │              ├─ variant_2: struct #29
      │     │              │  └─ [not]: integer #25
      │     │              ├─ variant_3: struct #30
      │     │              │  ├─ [gt]: optional #26
      │     │              │  │  └─ item: integer #25
      │     │              │  ├─ [gte]: optional #26
      │     │              │  │  └─ item: integer #25
      │     │              │  ├─ [lt]: optional #26
      │     │              │  │  └─ item: integer #25
      │     │              │  └─ [lte]: optional #26
      │     │              │     └─ item: integer #25
      │     │              ├─ variant_4: struct #31
      │     │              │  └─ [in]: list #27
      │     │              │     └─ item: integer #25
      │     │              └─ variant_5: struct #32
      │     │                 └─ [notIn]: list #27
      │     │                    └─ item: integer #25
      │     ├─ [name]: optional #130
      │     │  └─ item: optional '_string_filter_c' #22
      │     │     └─ item: union #21
      │     │        ├─ variant_0: union '_string_filter' #19
      │     │        │  ├─ variant_0: string #7
      │     │        │  ├─ variant_1: struct #10
      │     │        │  │  └─ [equals]: string #7
      │     │        │  ├─ variant_2: struct #11
      │     │        │  │  └─ [not]: string #7
      │     │        │  ├─ variant_3: struct #12
      │     │        │  │  └─ [in]: list #9
      │     │        │  │     └─ item: string #7
      │     │        │  ├─ variant_4: struct #13
      │     │        │  │  └─ [notIn]: list #9
      │     │        │  │     └─ item: string #7
      │     │        │  ├─ variant_5: struct #16
      │     │        │  │  ├─ [contains]: string #7
      │     │        │  │  └─ [mode]: optional #15
      │     │        │  │     └─ item: string #14 enum{ '"insensitive"' }
      │     │        │  ├─ variant_6: struct #17
      │     │        │  │  └─ [search]: string #7
      │     │        │  └─ variant_7: struct #18
      │     │        │     ├─ [endsWith]: optional #8
      │     │        │     │  └─ item: string #7
      │     │        │     └─ [startsWith]: optional #8
      │     │        │        └─ item: string #7
      │     │        └─ variant_1: struct #20
      │     │           └─ [not]: union '_string_filter' #19
      │     │              ├─ variant_0: string #7
      │     │              ├─ variant_1: struct #10
      │     │              │  └─ [equals]: string #7
      │     │              ├─ variant_2: struct #11
      │     │              │  └─ [not]: string #7
      │     │              ├─ variant_3: struct #12
      │     │              │  └─ [in]: list #9
      │     │              │     └─ item: string #7
      │     │              ├─ variant_4: struct #13
      │     │              │  └─ [notIn]: list #9
      │     │              │     └─ item: string #7
      │     │              ├─ variant_5: struct #16
      │     │              │  ├─ [contains]: string #7
      │     │              │  └─ [mode]: optional #15
      │     │              │     └─ item: string #14 enum{ '"insensitive"' }
      │     │              ├─ variant_6: struct #17
      │     │              │  └─ [search]: string #7
      │     │              └─ variant_7: struct #18
      │     │                 ├─ [endsWith]: optional #8
      │     │                 │  └─ item: string #7
      │     │                 └─ [startsWith]: optional #8
      │     │                    └─ item: string #7
      │     └─ [posts]: optional #139
      │        └─ item: union #138
      │           ├─ variant_0: struct #133
      │           │  └─ [every]: optional #132
      │           │     └─ item: &PostWhere #131
      │           ├─ variant_1: struct #135
      │           │  └─ [some]: optional #134
      │           │     └─ item: &PostWhere #131
      │           └─ variant_2: struct #137
      │              └─ [none]: optional #136
      │                 └─ item: &PostWhere #131
      ├─ [id]: optional #127
      │  └─ item: optional '_integer_filter_c' #36
      │     └─ item: union #35
      │        ├─ variant_0: either '_integer_filter' #33
      │        │  ├─ variant_0: integer #25
      │        │  ├─ variant_1: struct #28
      │        │  │  └─ [equals]: integer #25
      │        │  ├─ variant_2: struct #29
      │        │  │  └─ [not]: integer #25
      │        │  ├─ variant_3: struct #30
      │        │  │  ├─ [gt]: optional #26
      │        │  │  │  └─ item: integer #25
      │        │  │  ├─ [gte]: optional #26
      │        │  │  │  └─ item: integer #25
      │        │  │  ├─ [lt]: optional #26
      │        │  │  │  └─ item: integer #25
      │        │  │  └─ [lte]: optional #26
      │        │  │     └─ item: integer #25
      │        │  ├─ variant_4: struct #31
      │        │  │  └─ [in]: list #27
      │        │  │     └─ item: integer #25
      │        │  └─ variant_5: struct #32
      │        │     └─ [notIn]: list #27
      │        │        └─ item: integer #25
      │        └─ variant_1: struct #34
      │           └─ [not]: either '_integer_filter' #33
      │              ├─ variant_0: integer #25
      │              ├─ variant_1: struct #28
      │              │  └─ [equals]: integer #25
      │              ├─ variant_2: struct #29
      │              │  └─ [not]: integer #25
      │              ├─ variant_3: struct #30
      │              │  ├─ [gt]: optional #26
      │              │  │  └─ item: integer #25
      │              │  ├─ [gte]: optional #26
      │              │  │  └─ item: integer #25
      │              │  ├─ [lt]: optional #26
      │              │  │  └─ item: integer #25
      │              │  └─ [lte]: optional #26
      │              │     └─ item: integer #25
      │              ├─ variant_4: struct #31
      │              │  └─ [in]: list #27
      │              │     └─ item: integer #25
      │              └─ variant_5: struct #32
      │                 └─ [notIn]: list #27
      │                    └─ item: integer #25
      └─ [title]: optional #128
         └─ item: optional '_string_filter_c' #22
            └─ item: union #21
               ├─ variant_0: union '_string_filter' #19
               │  ├─ variant_0: string #7
               │  ├─ variant_1: struct #10
               │  │  └─ [equals]: string #7
               │  ├─ variant_2: struct #11
               │  │  └─ [not]: string #7
               │  ├─ variant_3: struct #12
               │  │  └─ [in]: list #9
               │  │     └─ item: string #7
               │  ├─ variant_4: struct #13
               │  │  └─ [notIn]: list #9
               │  │     └─ item: string #7
               │  ├─ variant_5: struct #16
               │  │  ├─ [contains]: string #7
               │  │  └─ [mode]: optional #15
               │  │     └─ item: string #14 enum{ '"insensitive"' }
               │  ├─ variant_6: struct #17
               │  │  └─ [search]: string #7
               │  └─ variant_7: struct #18
               │     ├─ [endsWith]: optional #8
               │     │  └─ item: string #7
               │     └─ [startsWith]: optional #8
               │        └─ item: string #7
               └─ variant_1: struct #20
                  └─ [not]: union '_string_filter' #19
                     ├─ variant_0: string #7
                     ├─ variant_1: struct #10
                     │  └─ [equals]: string #7
                     ├─ variant_2: struct #11
                     │  └─ [not]: string #7
                     ├─ variant_3: struct #12
                     │  └─ [in]: list #9
                     │     └─ item: string #7
                     ├─ variant_4: struct #13
                     │  └─ [notIn]: list #9
                     │     └─ item: string #7
                     ├─ variant_5: struct #16
                     │  ├─ [contains]: string #7
                     │  └─ [mode]: optional #15
                     │     └─ item: string #14 enum{ '"insensitive"' }
                     ├─ variant_6: struct #17
                     │  └─ [search]: string #7
                     └─ variant_7: struct #18
                        ├─ [endsWith]: optional #8
                        │  └─ item: string #7
                        └─ [startsWith]: optional #8
                           └─ item: string #7
