src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_many Post out.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: list 'list_309' #310
└─ item: struct 'Post_with_nested_count' #308
   ├─ [author]: &User #131
   ├─ [id]: integer #127
   └─ [title]: string #130
