src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_many Record out.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: list #109
└─ item: struct 'Record_with_nested_count' #108
   ├─ [age]: optional #7
   │  └─ item: integer #6
   ├─ [created_at]: string #0
   ├─ [id]: string #2
   └─ [name]: string #5
