src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_many User inp.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct 'User_query_input' #216
├─ [cursor]: optional #209
│  └─ item: union 'User_cursor' #208
│     ├─ variant_0: struct #205
│     │  └─ [id]: integer #151
│     └─ variant_1: struct #206
│        └─ [name]: string #152
├─ [distinct]: optional #214
│  └─ item: list 'User_keys_union' #213
│     └─ item: string #211 enum{ '"id"', '"name"', '"posts"' }
├─ [orderBy]: optional #201
│  └─ item: list 'User_order_by' #200
│     └─ item: struct #198
│        ├─ [id]: &_prisma_sort #103
│        ├─ [name]: &_prisma_sort #103
│        └─ [posts]: optional '_prisma_sort_by_aggregates' #197
│           └─ item: struct #195
│              ├─ [_avg]: &_prisma_sort #103
│              ├─ [_count]: &_prisma_sort #103
│              ├─ [_max]: &_prisma_sort #103
│              ├─ [_min]: &_prisma_sort #103
│              └─ [_sum]: &_prisma_sort #103
├─ [skip]: optional #203
│  └─ item: &_skip #127
├─ [take]: optional #202
│  └─ item: &_take #123
└─ [where]: optional #192
   └─ item: struct 'User_query_where_input' #191
      ├─ [AND]: optional #188
      │  └─ item: list #187
      │     └─ item: &User_query_where_input #186
      ├─ [NOT]: optional #189
      │  └─ item: &User_query_where_input #186
      ├─ [OR]: optional #188
      │  └─ item: list #187
      │     └─ item: &User_query_where_input #186
      ├─ [id]: optional #167
      │  └─ item: &_prisma_integer_filter_ex #55
      ├─ [name]: optional #168
      │  └─ item: &_prisma_string_filter_ex #34
      └─ [posts]: optional #183
         └─ item: union #182
            ├─ variant_0: struct #177
            │  └─ [every]: optional #176
            │     └─ item: struct 'Post_where_excluding_User' #175
            │        ├─ [author]: optional #173
            │        │  └─ item: &User_where #172
            │        ├─ [id]: optional #170
            │        │  └─ item: &_prisma_integer_filter_ex #55
            │        └─ [title]: optional #171
            │           └─ item: &_prisma_string_filter_ex #34
            ├─ variant_1: struct #179
            │  └─ [some]: optional #178
            │     └─ item: struct 'Post_where_excluding_User' #175
            │        ├─ [author]: optional #173
            │        │  └─ item: &User_where #172
            │        ├─ [id]: optional #170
            │        │  └─ item: &_prisma_integer_filter_ex #55
            │        └─ [title]: optional #171
            │           └─ item: &_prisma_string_filter_ex #34
            └─ variant_2: struct #181
               └─ [none]: optional #180
                  └─ item: struct 'Post_where_excluding_User' #175
                     ├─ [author]: optional #173
                     │  └─ item: &User_where #172
                     ├─ [id]: optional #170
                     │  └─ item: &_prisma_integer_filter_ex #55
                     └─ [title]: optional #171
                        └─ item: &_prisma_string_filter_ex #34
