src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__test__find_many User out.snap
---
source: src/typegraph/core/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: list 'list_126' #126
└─ item: struct 'UserWithNestedCount' #125
   ├─ [_count]: struct #124
   │  └─ [posts]: optional '_Count' #123
   │     └─ item: integer #122
   ├─ [id]: integer #74
   ├─ [name]: string #75
   └─ [posts]: list 'list_121' #121
      └─ item: struct 'PostWithNestedCount_excluding___rel_Post_User_1' #120
         ├─ [id]: integer #79
         └─ [title]: string #80
